--- a/home.css
+++ b/home.css
@@ -46,6 +46,11 @@ h1 {
     font-size: 100px;
 }
 
+h2{
+    padding: 40px 0px 15px 0px;
+    margin: 0px;
+}
+
 h4{
     font-family: Optima, sans-serif;
 }
